# arix

./: README.md  poetry-update-deps.sh  pyproject.toml  setup.cfg
src/: arix.py
