[tool.poetry]
name = "arix"
version = "2020.11.0a1"
description = "Asterisk ARI WebSocket/Callback Service"
authors = ["Shane R. Spencer <spencersr@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
arix = 'arix:main'

[tool.poetry.dependencies]
python = "^3.8"
appdirs = "^1.4.4"
tornado = "^6.1"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
isort = "5.5.3"
autoflake = "^1.4"
bandit = "^1.6.2"
flake8 = "^3.8.4"
hypothesis = "^5.41.2"
mypy = "^0.790"
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
